--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Electronics,Communication & Information Engineering Student</p>
                 <nav>
-                    <a href="http://youtube.com/technologychannel"><i class="fab fa-youtube"></i></a>
+                    <a href="https://youtube.com/@sarshijkarn?si=WHPAJMYl2HTZ-Oce"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.instagram.com/sarshijkarn?fbclid=IwZXh0bgNhZW0CMTAAAR2LDoJhYqWPZbITX_v1QSinLi0An97Lo6P0D9Oo8R7OwQfsBenCbcZrIbo_aem_00z98l8j2AGQUvGQUl7wIA"><i class="fab fa-facebook-f"></i></a>
-                    <a href="http://github.com/bishworajpoudelofficial"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/SarshijKarnl"><i class="fab fa-github"></i></a>
+                    <a href="https://x.com/sarshijkarn"><i class="fab fa-twitter"></i></a>  
+
                 </nav>
               
                
