--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <a href="https://youtube.com/@sarshijkarn?si=WHPAJMYl2HTZ-Oce"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.instagram.com/sarshijkarn?fbclid=IwZXh0bgNhZW0CMTAAAR2LDoJhYqWPZbITX_v1QSinLi0An97Lo6P0D9Oo8R7OwQfsBenCbcZrIbo_aem_00z98l8j2AGQUvGQUl7wIA"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/SarshijKarnl"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/SarshijKarn"><i class="fab fa-github"></i></a>
                     <a href="https://x.com/sarshijkarn"><i class="fab fa-twitter"></i></a>  
 
                 </nav>
