--- a/index.html
+++ b/index.html
@@ -1,53 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Sarshij Karn Official Website</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
-                <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Sarshij Karn</h1>
-                <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Electronics,Communication & Information Engineering Student</p>
-                <nav>
-                    <a href="https://youtube.com/@sarshijkarn?si=WHPAJMYl2HTZ-Oce"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.instagram.com/sarshijkarn?fbclid=IwZXh0bgNhZW0CMTAAAR2LDoJhYqWPZbITX_v1QSinLi0An97Lo6P0D9Oo8R7OwQfsBenCbcZrIbo_aem_00z98l8j2AGQUvGQUl7wIA"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/SarshijKarn"><i class="fab fa-github"></i></a>
-                    <a href="https://x.com/sarshijkarn"><i class="fab fa-twitter"></i></a>  
+<head>
+    <link rel="stylesheet" href="website.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sarshij Karn Official Site</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <header>
+        <nav>
+            <h1>SARSHIJ KARN</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="theme-toggle">🌙</div>
+        </nav>
+    </header>
 
-                </nav>
-              
-               
-            </div>
-        </header>
-        <!-- Copyright Section-->
-        <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; 2024 Sarshij Karn</small></div>
+    <section class="hero">
+        <img src="profile.jpg" alt="Sarshij Karn">
+        <h2>Electronics, Communication & Information Engineering Student</h2>
+        <p>Future Engineer | Tech Enthusiast | Explorer</p>
+        <div class="social-icons">
+            <a href="https://youtube.com/@sarshijkarn?si=WHPAJMYl2HTZ-Oce"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/sarshijkarn?fbclid=IwZXh0bgNhZW0CMTAAAR2LDoJhYqWPZbITX_v1QSinLi0An97Lo6P0D9Oo8R7OwQfsBenCbcZrIbo_aem_00z98l8j2AGQUvGQUl7wIA"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/SarshijKarn"><i class="fab fa-github"></i></a>
+            <a href="https://x.com/sarshijkarn"><i class="fab fa-twitter"></i></a>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Welcome! I'm Sarshij Karn, an Electronics Engineering student with a passion for technology, stock analysis, and content creation.</p>
+    </section>
+
+    <section id="blog">
+        <h2>Blog</h2>
+        <p>Coming soon...</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; 2024 Sarshij Karn</p>
+    </footer>
+
+    <script>
+        document.querySelector('.theme-toggle').addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+        });
+    </script>
+</body>
 </html>
+
