--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>Welcome! I'm Sarshij Karn, an Electronics Engineering student with a passion for technology, stock analysis, and content creation.</p>
+        <p>Here, I want to inform you that this site is currently under development! It will be live soon.</p>
     </section>
 
     <section id="blog">
