--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         
         <!-- Social Media Links as Text -->
         <div class="social-links">
+            <a href="https://facebook.com/sarshij.karn.3" target="_blank">| Facebook |</a> 
             <a href="https://youtube.com/@sarshijkarn" target="_blank">| YouTube |</a> 
             <a href="https://www.instagram.com/sarshijkarn" target="_blank">Instagram |</a>
             <a href="https://github.com/SarshijKarn" target="_blank">GitHub |</a>
