--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="website.css">
+    <link rel="stylesheet" href="trial.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarshij Karn Official Site</title>
@@ -30,15 +31,35 @@
 
     <section id="about" class="section">
         <h2>About Me</h2>
-        <p>Hello! I’m <strong>Sarshij Karn</strong>, an Electronics Engineering student passionate about technology, stock analysis, and content creation. I’m always learning and exploring new things.</p>
-        
+        <p>Hello! I’m <strong>Sarshij Karn</strong>, an Electronics Engineering student passionate about technology, stock analysis, and content creation. I’m always learning and exploring new things.</p><br>
+        <P>Let's Connect.</p><br>
         <!-- Social Media Links as Text -->
         <div class="social-links">
-            <a href="https://facebook.com/sarshij.karn.3" target="_blank">| Facebook |</a> 
-            <a href="https://youtube.com/@sarshijkarn" target="_blank">| YouTube |</a> 
-            <a href="https://www.instagram.com/sarshijkarn" target="_blank">Instagram |</a>
-            <a href="https://github.com/SarshijKarn" target="_blank">GitHub |</a>
-            <a href="https://x.com/sarshijkarn" target="_blank">Twitter |</a>
+            <!-- Facebook Icon -->
+<a href="https://facebook.com/sarshij.karn.3" target="_blank">
+  <i class="fab fa-facebook-square" style="font-size: 30px;"></i>
+</a>
+
+<!-- Twitter Icon -->
+<a href="https://x.com/sarshijkarn" target="_blank">
+  <i class="fab fa-twitter-square" style="font-size: 30px;"></i>
+</a>
+
+<!-- Instagram Icon -->
+<a href="https://www.instagram.com/sarshijkarn" target="_blank">
+  <i class="fab fa-instagram-square" style="font-size: 30px;"></i>
+</a>
+
+<!-- GitHub Icon -->
+<a href="https://github.com/SarshijKarn" target="_blank">
+  <i class="fab fa-github-square" style="font-size: 30px;"></i>
+</a>
+
+<!-- YouTube Icon -->
+<a href="https://youtube.com/@sarshijkarn" target="_blank">
+  <i class="fab fa-youtube-square" style="font-size: 30px;"></i>
+</a>
+
         </div>
     </section>
 
