--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1>Sarshij Karn</h1>
+            <h1><u><i><b></b></i></u>Sarshij Karn</u></i></b></i></h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
