--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="website.css">
+    <link rel="stylesheet" href="trial.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1><u><i><b>Sarshij Karn</b></i></u></h1>
+            <h1><u><i><b>Sarshij Karn</u></i></b></h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
@@ -116,7 +116,7 @@
     </section>
 
     <section id="contact" class="section">
-        <h2>Contact Me (For Real)</h2>
+        <h2>Contact Me</h2>
 <form action="https://formspree.io/f/mnnpappe" method="POST">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
