--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <meta name="author" content="Sarshij Karn" />
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+   {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Sarshij Karn",
+      "url": "https://sarshijkarn.com.np",
+      "sameAs": [
+        "https://www.linkedin.com/in/sarshijkarn",
+        "https://facebook.com/sarshij.karn.3",
+        "https://x.com/sarshijkarn"
+        "https://www.instagram.com/sarshijkarn"
+        "https://github.com/SarshijKarn"
+        "https://youtube.com/@sarshijkarn"
+      ]
+   }
+    </script>
 </head>
 <body>
     <header>
