--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarshij Karn Official Site</title>
-    <meta name="description" content="Welcome to Sarshij Karn's official website./>
+    <meta name="description" content="Welcome to Sarshij Karn's official website."/>
     <meta name="keywords" content="Sarshij Karn, Sarshij, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, sarshij, sarshij karn"/>
     <meta name="author" content="Sarshij Karn" />
     <link rel="stylesheet" href="styles.css">
