--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
     <section id="contact" class="section">
         <h2>Contact Me</h2>
-        <p>Got something important to say? I’m listening!</p><br>
-        <p>{search me on google,for info about me 😉}</p>
+        <p>Got something important to say? I’m listening!</p>
+        <p>[search me on google,for info about me 😉]</p>
         <div class="contact-container">
             <form action="https://formspree.io/f/mnnpappe" method="POST">
                 <div class="input-group">
