--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <section id="qualifications" class="section">
-        <h2>Qualifications: Yes, I Actually Did That (And No, I’m Not Bragging)
+        <h2>Qualifications: Yes, I Actually Did That!
         </h2>
         <div class="card-container">
             <div class="card">
