--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
         <button class="collapsible-btn">Semester 1</button>
         <div class="content">
           <ul>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID1" target="_blank">Engineering Mathematics I</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID2" target="_blank">Engineering Physics</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID3" target="_blank">Computer Programming</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID4" target="_blank">Engineering Drawing</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID5" target="_blank">Fundamentals of Electrical and Electronics Engineering</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID6" target="_blank">Engineering Workshop</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1ekYc2S9Q6HvYzbywTYYLN_A57DMnwah0?usp=drive_link" target="_blank">Engineering Mathematics I</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eZ1yGLY6_vaHNcprRWnIgpH1bRlf2Mu6?usp=drive_link" target="_blank">Engineering Physics</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1ec99_INhe_qhOjh2csd3kp-iGW3XyBMk?usp=drive_link" target="_blank">Computer Programming</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1ee9OnMUzpo4NvuHHKOJAsmQUCNHfNlIA?usp=drive_link" target="_blank">Engineering Drawing</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1efpea8HbrU8e3wAqRr_wB___RugxMaDp?usp=drive_link" target="_blank">Fundamentals of Electrical and Electronics Engineering</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eag7g9VtiCghu0HOJZHq5EUwXpdFlttV?usp=drive_link" target="_blank">Engineering Workshop</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1TZjbRV9p3fViyzKpbInVWqcCbxJjE486?usp=drive_link" target="_blank">Extras</a></li>
           </ul>
         </div>
       </div>
@@ -78,12 +79,13 @@
         <button class="collapsible-btn">Semester 2</button>
         <div class="content">
           <ul>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID7" target="_blank">Engineering Mathematics II</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID8" target="_blank">Object Oriented Programming</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID9" target="_blank">Electronic Device and Circuits</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID10" target="_blank">Digital Logic</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID11" target="_blank">Electrical Circuits and Machines</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID12" target="_blank">Engineering Chemistry</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eO3pxXYQJyr6Bs2pYEXHabcBxiUO5-T3?usp=drive_link" target="_blank">Engineering Mathematics II</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eAtyI4WM6itepNOxbPE4JByKW9Yxt5DY?usp=drive_link" target="_blank">Object Oriented Programming</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eOHM3Vo1ry4JMPYlO8TrPM3bNxPA17nu?usp=drive_link" target="_blank">Electronic Device and Circuits</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eW-512FzyNkupfs9cNQlrcMYmkShwrMY?usp=drive_link" target="_blank">Digital Logic</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eVUVYgHlhQLQxuUUHuAjMKSIk9hPus_u?usp=drive_link" target="_blank">Electrical Circuits and Machines</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1eJlzMC1giLyjp_LVROd2hCg2I2fF5mCM?usp=drive_link" target="_blank">Engineering Chemistry</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1-dAa9NfcBbs5CIKJFQAOiWveUnOtPtik?usp=drive_link" target="_blank">Extras</a></li>
           </ul>
         </div>
       </div>
@@ -93,12 +95,13 @@
         <button class="collapsible-btn">Semester 3</button>
         <div class="content">
           <ul>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID13" target="_blank">Engineering Mathematics III</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID14" target="_blank">Communication English</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID15" target="_blank">Computer Graphics and Visualization</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID16" target="_blank">Microprocessors</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID17" target="_blank">Advanced Electronics</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID18" target="_blank">Control System</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aR7aOqISs3Gsquy_rcVlbWD5ZQN65kcg?usp=drive_link" target="_blank">Engineering Mathematics III</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aXQX6WCyoKi1yxn39rH8PwIJJ_a1Bjsu?usp=drive_link" target="_blank">Communication English</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aeRIlbTJPefUgWkJKir3EVnzxD7LtHHW?usp=drive_link" target="_blank">Computer Graphics and Visualization</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aUQR1mKUSey242skL8Q1pbF4FIc0iNJs?usp=drive_link" target="_blank">Microprocessors</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aJDQzPLkNxVUT5Qbc1GAEnUDpMFR3dsV?usp=drive_link" target="_blank">Advanced Electronics</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aMZZxmcwHogRDP4qLk_Tz8ndP2Oip9Av?usp=drive_link" target="_blank">Control System</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aOVh1JbjjFYoOVLah53800NTdU0SfCtS?usp=drive_link" target="_blank">Extras</a></li>
           </ul>
         </div>
       </div>
@@ -114,6 +117,7 @@
             <li><a href="https://drive.google.com/drive/folders/yourFolderID22" target="_blank">Computer Organization & Architecture</a></li>
             <li><a href="https://drive.google.com/drive/folders/yourFolderID23" target="_blank">Electromagnetics</a></li>
             <li><a href="https://drive.google.com/drive/folders/yourFolderID24" target="_blank">Signals and Systems</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1aOVh1JbjjFYoOVLah53800NTdU0SfCtS?usp=drive_link" target="_blank">Extras</a></li>
           </ul>
         </div>
       </div>
@@ -311,4 +315,6 @@
 
 </body>
 </html>
+
+
 
