--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
         <button class="collapsible-btn">Semester 4</button>
         <div class="content">
           <ul>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID19" target="_blank">Numerical Methods</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID20" target="_blank">Discrete Structure</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID21" target="_blank">Instrumentation</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID22" target="_blank">Computer Organization & Architecture</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID23" target="_blank">Electromagnetics</a></li>
-            <li><a href="https://drive.google.com/drive/folders/yourFolderID24" target="_blank">Signals and Systems</a></li>
-            <li><a href="https://drive.google.com/drive/folders/1aOVh1JbjjFYoOVLah53800NTdU0SfCtS?usp=drive_link" target="_blank">Extras</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mWwwyzJteTv61wgBuEvoVm3uFMtYNOQ-" target="_blank">Numerical Methods</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mFlunugaMpZBTeAd9WmVOJrh_oRHEcok" target="_blank">Discrete Structure</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mNUzNXyB39V5Nh-LmKPeEfoEVSmqp83Z" target="_blank">Instrumentation</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mWJNUt6h157SXLGAUwvo4UVhVsY896Bv" target="_blank">Computer Organization & Architecture</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mGynXRJpfZwjw-Mnka9gBh_WSKubadWD" target="_blank">Electromagnetics</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1mVXiwN-SdB3ROq4Dx2Ei59a8sgMBRoUm" target="_blank">Signals and Systems</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1phlXeZKNz4wyfgVb2S_bh2i7b5qQh7yM" target="_blank">Extras</a></li>
           </ul>
         </div>
       </div>
