--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarshij Karn Official Site</title>
+    <title>Sarshij Karn</title>
     <meta name="description" content="Welcome to Sarshij Karn's official website."/>
-    <meta name="keywords" content="Sarshij Karn, Sarshij, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, sarshij, sarshij karn"/>
+    <meta name="keywords" content="Sarshij Karn, Sarshij, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, sarshij, sarshij karn"/>
     <meta name="author" content="Sarshij Karn" />
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
@@ -225,7 +225,7 @@
     </section>
 
     <section id="qualifications" class="section">
-        <h2>Qualifications: Yes, I Actually Did That (And No, I’m Not Bragging)
+        <h2>Qualifications: Yes, I Actually Did That!
         </h2>
         <div class="card-container">
             <div class="card">
@@ -310,9 +310,8 @@
     </script>
 
 <footer id="copyright">
-    Copyright © 2025 Sarshij Karn
+    Copyright © 2025 Sarshij Karn | All Rights Reserved |
 </footer>
-
 </body>
 </html>
 
