--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <img src="profile.jpg" alt="Sarshij Karn">
         <h2>Electronics, Communication & Information Engineering Student</h2>
         <p>Future Engineer 💡 | Tech Enthusiast 🤖 |  Sentimental Technophile 💻❤️</p>
-        <h5><p>Big things are coming — We’ll be live shortly!🚀✌</p><h/h5>
+        <h5>Big things are coming — We’ll be live shortly!🚀✌<h/5>
     </section>
 
 
