--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Welcome to Sarshij Karn's official website."/>
     <meta name="keywords" content="Sarshij Karn, Sarshij, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, sarshij, sarshij karn"/>
     <meta name="author" content="Sarshij Karn" />
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/refs/heads/main/assets/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
     <script type="application/ld+json">
