--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="author" content="Sarshij Karn" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/refs/heads/main/assets/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/refs/heads/main/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/refs/heads/main/assets/favicon-48x48.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
     <script type="application/ld+json">
    {
