--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-
+<div id="trail-container"></div>
   <!-- Left Decorative Wave -->
 <div class="side-wave left-wave">
   <svg width="80" height="100%" viewBox="0 0 80 800" fill="none" xmlns="http://www.w3.org/2000/svg">
