--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
   <!-- 3D Animated Background -->
   <canvas id="bg-canvas"></canvas>
   <div id="three-cube-bg"></div>
-
-
-
     <!-- Navbar -->
   <header class="navbar glass">
     <div class="logo">
@@ -68,11 +65,8 @@
         <li><a href="#hobbies" class="nav-link">Hobbies</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
         <li><a href="#resources-section" class="nav-link">Notes</a></li>
-
         <li>
-          <button id="theme-toggle" aria-label="Toggle theme">
-            <i class="fas fa-moon"></i>
-          </button>
+            <i class="fas fa-sun"></i>
         </li>
       </ul>
     </nav>
