--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
       <div class="typewriter" id="typewriter"></div>
       <div class="social-icons">
         <a href="https://github.com/SarshijKarn" target="_blank" class="social-icon fab fa-github"></a>
-        <a href="https://linkedin.com/in/sarshij-karn" target="_blank" class="social-icon fab fa-linkedin"></a>
-        <a href="https://twitter.com/SarshijKarn" target="_blank" class="social-icon fab fa-twitter"></a>
-        <a href="mailto:sarshijkarn@gmail.com" class="social-icon fas fa-envelope"></a>
+        <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank" class="social-icon fab fa-linkedin"></a>
+        <a href="https://x.com/sarshijkarn" target="_blank" class="social-icon fab fa-twitter"></a>
+        <a href="https://facebook.com/sarshij.karn.3" class="social-icon fab fa-facebook"></a>
+        <a href="https://www.instagram.com/sarshijkarn" class="social-icon fab fa-instagram"></a>
+        <a href="https://youtube.com/@sarshijkarn" class="social-icon fab fa-youtube"></a>
+        <a href="mailto:sarshijkarn333@gmail.com" class="social-icon fas fa-envelope"></a> 
       </div>
     </div>
     <div class="hero-3d">
