--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </h1>
       <h3 id="tagline" class="subtitle"></h3>
       <div class="typewriter" id="typewriter"></div>
-      <div class="social-icons">
+      <div class="social-links">
         <a href="https://github.com/SarshijKarn" target="_blank" class="social-icon fab fa-github"></a>
         <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank" class="social-icon fab fa-linkedin"></a>
         <a href="https://x.com/sarshijkarn" target="_blank" class="social-icon fab fa-twitter"></a>
