--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="typewriter" id="typewriter"></div>
       <div class="social-links">
        <a href="https://github.com/SarshijKarn" target="_blank">
-    <i class="fab fa-github-square"></i>
+    <i class="fab fa-github"></i>
 </a>
         <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank" class="social-icon fab fa-linkedin"></a>
         <a href="https://x.com/sarshijkarn" target="_blank" class="social-icon fab fa-twitter"></a>
