--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
       <h3 id="tagline" class="subtitle"></h3>
       <div class="typewriter" id="typewriter"></div>
       <div class="social-links">
-       <a href="https://github.com/SarshijKarn" target="_blank">
-    <i class="fab fa-github"></i>
-</a>
+       <a href="https://github.com/SarshijKarn" class="social-icon fab fa-github"></a>
         <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank" class="social-icon fab fa-linkedin"></a>
         <a href="https://x.com/sarshijkarn" target="_blank" class="social-icon fab fa-twitter"></a>
         <a href="https://facebook.com/sarshij.karn.3" class="social-icon fab fa-facebook"></a>
