--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
       <h3 id="tagline" class="subtitle"></h3>
       <div class="typewriter" id="typewriter"></div>
       <div class="social-links">
-       <a href="https://github.com/SarshijKarn" class="social-icon fab fa-github"></a>
-        <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank" class="social-icon fab fa-linkedin"></a>
-        <a href="https://x.com/sarshijkarn" target="_blank" class="social-icon fab fa-twitter"></a>
-        <a href="https://facebook.com/sarshij.karn.3" class="social-icon fab fa-facebook"></a>
-        <a href="https://www.instagram.com/sarshijkarn" class="social-icon fab fa-instagram"></a>
-        <a href="https://youtube.com/@sarshijkarn" class="social-icon fab fa-youtube"></a>
-        <a href="mailto:sarshijkarn333@gmail.com" class="social-icon fas fa-envelope"></a> 
-      </div>
+  <a href="https://github.com/SarshijKarn" target="_blank"><i class="fab fa-github social-icon"></i></a>
+  <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank"><i class="fab fa-linkedin social-icon"></i></a>
+  <a href="https://x.com/sarshijkarn" target="_blank"><i class="fab fa-twitter social-icon"></i></a>
+  <a href="https://facebook.com/sarshij.karn.3" target="_blank"><i class="fab fa-facebook social-icon"></i></a>
+  <a href="https://www.instagram.com/sarshijkarn" target="_blank"><i class="fab fa-instagram social-icon"></i></a>
+  <a href="https://youtube.com/@sarshijkarn" target="_blank"><i class="fab fa-youtube social-icon"></i></a>
+  <a href="mailto:sarshijkarn333@gmail.com"><i class="fas fa-envelope social-icon"></i></a>
+</div>
     </div>
     <div class="hero-3d">
       <img src="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/logo.jpg" alt="3D Tech" class="floating-img"/>
