--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="typewriter" id="typewriter"></div>
       <div class="social-links">
   <a href="https://github.com/SarshijKarn" target="_blank"><i class="fab fa-github social-icon"></i></a>
-  <a href="https://www.linkedin.com/in/sarshijkarn" target="_blank"><i class="fab fa-linkedin social-icon"></i></a>
+  <a href="https://www.linkedin.com/in/sarshij-karn-1a7766236 " target="_blank"><i class="fab fa-linkedin social-icon"></i></a>
   <a href="https://x.com/sarshijkarn" target="_blank"><i class="fab fa-twitter social-icon"></i></a>
   <a href="https://facebook.com/sarshij.karn.3" target="_blank"><i class="fab fa-facebook social-icon"></i></a>
   <a href="https://www.instagram.com/sarshijkarn" target="_blank"><i class="fab fa-instagram social-icon"></i></a>
