--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       "name": "Sarshij Karn",
       "url": "https://sarshijkarn.com.np",
       "sameAs": [
-        "https://www.linkedin.com/in/sarshijkarn",
+        "https://www.linkedin.com/in/sarshij-karn-1a7766236",
         "https://facebook.com/sarshij.karn.3",
         "https://x.com/sarshijkarn",
         "https://www.instagram.com/sarshijkarn",
@@ -710,43 +710,15 @@
 
     <section id="about" class="section">
         <h2>About Me</h2>
+        <div class="card-container">
+        <div class="card">
         <p>Hello! I’m <strong>Sarshij Karn</strong>. I'm not just an Electronics + Communication + Information Engineering student — I'm also a part-time philosopher & a tech wizard who accidentally became a vibe coder, trader & a content creator.
            My brain runs on curiosity, my heart runs on scars, and my project runs on late nights and emotional flashbacks.</p>
               I code like it's therapy, trade like it's art, and YouTube like it's war.
            <p>"If it’s chaotic, creative, and a bit too ambitious, it’s probably mine." 🔥
             </p><br>
-        <P>Let's Connect.👉👈</p><br>
-        <!-- Social Media Links as Text -->
-        <div class="social-links">
-
- <!-- Facebook Icon -->
-<a href="https://facebook.com/sarshij.karn.3" target="_blank">
-  <i class="fab fa-facebook-square" style="font-size: 30px;"></i>
-</a>
-
-<!-- Twitter Icon -->
-<a href="https://x.com/sarshijkarn" target="_blank">
-  <i class="fab fa-twitter-square" style="font-size: 30px;"></i>
-</a>
-
-<!-- Instagram Icon -->
-<a href="https://www.instagram.com/sarshijkarn" target="_blank">
-  <i class="fab fa-instagram-square" style="font-size: 30px;"></i>
-</a>
-
-<!-- GitHub Icon -->
-<a href="https://github.com/SarshijKarn" target="_blank">
-  <i class="fab fa-github-square" style="font-size: 30px;"></i>
-</a>
-
-<!-- YouTube Icon -->
-<a href="https://youtube.com/@sarshijkarn" target="_blank">
-  <i class="fab fa-youtube-square" style="font-size: 30px;"></i>
-</a>
-
         </div>
     </section>
-
 
   
     <section id="hobbies" class="section">
