--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sarshijkarn.com.np — Initializing...</title>
+  <title>Sarshij Karn</title>
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-48x48.png">
   <style>
     body {
       margin: 0;
