--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
   const typingSound = document.getElementById('typing-sound');
 
 const lines = [
-  "[SYSTEM] Initializing theme engine ...",
-  "[ENGINE] Powering up modules...",
-  "[NETWORK] Establishing secure connection...",
-  "[STATUS] System check complete.",
+  "[SYSTEM] Initializing theme engine ...\n",
+  "[ENGINE] Powering up modules...\n",
+  "[NETWORK] Establishing secure connection...\n",
+  "[STATUS] System check complete...\n",
   "[BOOT] Launching Sarshij Karn environment →"
 ];
 
