--- a/realsite.html
+++ b/realsite.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sarshij Karn</title>
-    <meta name="description" content="Welcome to Sarshij Karn's official website."/>
-    <meta name="keywords" content="Sarshij Karn, Sarshij, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, sarshij, sarshij karn"/>
+    <meta name="description" content="Welcome to the official portfolio of Sarshij Karn — a passionate Electronics, Communication & Information Engineering student. Explore my journey, tech projects, personal interests, and achievements in innovation, trading, and creativity."/>
+    <meta name="keywords" content="Sarshij Karn, Sarshij, sarshij, sarshij karn, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, portfolio, engineering student, projects, creativity, notes, engineering notes, technology, templates,"/>
     <meta name="author" content="Sarshij Karn" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon.ico">
