--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-48x48.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/apple-touch-icon.png">
+<!-- Web Manifest for PWA support (optional, if you have one) -->
+  <link rel="manifest" href="/site.webmanifest">
+  
   <style>
     body {
       margin: 0;
