--- a/realsite.html
+++ b/realsite.html
@@ -9,10 +9,16 @@
     <meta name="description" content="Welcome to the official portfolio of Sarshij Karn — a passionate Electronics, Communication & Information Engineering student. Explore my journey, tech projects, personal interests, and achievements in innovation, trading, and creativity."/>
     <meta name="keywords" content="Sarshij Karn, Sarshij, sarshij, sarshij karn, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, portfolio, engineering student, projects, creativity, notes, engineering notes, technology, templates,"/>
     <meta name="author" content="Sarshij Karn" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/apple-touch-icon.png">
+    <!-- Web Manifest for PWA support (optional, if you have one) -->
+    <link rel="manifest" href="/site.webmanifest">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
     <script type="application/ld+json">
    {
