--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sarshij Karn</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/assets/favicon-48x48.png">
