--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="background"></div>
 
   <div class="terminal-window">
-    <div class="window-header">system.initialize()</div>
+    <div class="window-header">sarshij.initialize()</div>
     <div class="code-box" id="code-box"></div>
     <div class="status-bar">
       <span class="dot online"></span> SYSTEM READY
@@ -158,7 +158,7 @@ const lines = [
       } else {
         currentChar = 0;
         currentLine++;
-        setTimeout(typeLine, 100);
+        setTimeout(typeLine, 50);
       }
     } else {
       speakWelcome();
