--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/favicon-48x48.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/SarshijKarn/My-Website/main/apple-touch-icon.png">
-<!-- Web Manifest for PWA support (optional, if you have one) -->
-  <link rel="manifest" href="/site.webmanifest">
+<!-- Standard favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+<!-- PNG versions for modern browsers -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+
+<!-- Apple Touch Icon for iOS devices -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+<!-- Web Manifest for PWA support -->
+<link rel="manifest" href="/site.webmanifest">
+
   
   <style>
     body {
