--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sarshij Karn</title>
-  <link rel="canonical" href="https://sarshijkarn.com.np/" />
+  <link rel="canonical" href="https://sarshijkarn.com.np/realsite.html" />
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
