fix: Add missing manifest and update meta tags

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       content="Sarshij Karn, Sarshij, sarshij, sarshij karn, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, portfolio, engineering student, projects, creativity, notes, engineering notes, technology, templates,"
     />
     <meta name="author" content="Sarshij Karn" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
