--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
             </div>
 
             <form
-              action="http://localhost:3000/api/contact"
+              action="#"
               method="POST"
               id="contactForm"
               novalidate
@@ -1234,6 +1234,6 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="script.js?v=2.1"></script>
+    <script src="script.js?v=2.2"></script>
   </body>
 </html>
